2005-03-20  0.8.1.59  Roland Clobus <rclobus@bigfoot.com>
	* common/game.c: The automatic indent did break the sending of
	gameinfo.

2005-03-20  0.8.1.58  Roland Clobus <rclobus@bigfoot.com>
	* ALL: Applied 'make indent'
	
2005-03-20  0.8.1.57  Roland Clobus <rclobus@bigfoot.com>
	* server/gnocatan-server.c: Made random seating order the default.
	* server/gtk/gnocatan-server-gtk.c: Made random order setting
	persistent.
	* Makefile.am: Added 'make indent' target.

2005-03-16  Brian Wellington <bwelling@xbill.org>
	* common/game.c, common/game.h, server/meta.c, server/player.c,
	server/server.c, server/server.h: Move the register-server,
	server-port, and random-order fields from the GameParams object to
	the Game object.
	* client/gtk/resource-table.c (resource_table_new): Removed the use of
	a fixed-size buffer.

2005-03-14  0.8.1.56  Brian Wellington <bwelling@xbill.org>
	* common/gtk/aboutbox.c, common/gtk/aboutbox.h, common/gtk/Makefile.am,
	client/gtk/gui.c, server/gtk/gnocatan-server-gtk.c: Add common code for
	displaying about boxes; make the client and server use it.
	* common/game.c, common/game.h, server/gnocatan-server.c: Add
	params_load_file()/params_write_file() helper functions.
	* common/game.h, server/gnocatan-server.c, server/gnocatan-server.h,
	server/player.c, server/pregame.c, server/server.c, server/server.h,
	server/gtk/gnocatan-server-gtk.c: Add the ability to randomize
	seating order.
	* client/gtk/guimap.c, client/gtk/guimap.h, client/gtk/gui.c,
	client/gtk/gui.h, client/gtk/callbacks.c: When starting a new game,
	clear the highlighted chits, pointed out by Arjan Schrijver.

	Gnocatan is joined by a new developer: Brian Wellington

2005-03-12  0.8.1.55  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, added gnocatan.spec.in, removed gnocatan.spec: The
	spec is automatically generated and uses the current version.
	* ai/ai.c, client/ai/ai.c, client/gtk/connect.c, common/network.c,
	common/network.h, meta-server/Makefile.am,